src/objects/Docusign_Settings_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Default_Email_Text_MERC__c</fullName>
        <description>Default email text used in MERC_DocusignService class.</description>
        <inlineHelpText>Default email text used in Docusign Service.</inlineHelpText>
        <label>Default Email Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name_MERC__c</fullName>
        <description>Email template name used by the MERC_DocusignService class.</description>
        <inlineHelpText>Email template name used by the Docusign Service.</inlineHelpText>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Signature_Anchor_String_MERC__c</fullName>
        <description>Lilly signature anchor string used by the MERC_Docusign_Service class.</description>
        <inlineHelpText>Lilly signature anchor string used by the Docusign Service.</inlineHelpText>
        <label>Lilly Signature Anchor String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>